# ECS

./: .gitignore  BaseComponent.h  BaseSystems.h  CMakeLists.txt  ComponentManager.cpp  ComponentManager.h  ComponentPool.cpp  ComponentPool.h  ComponentUtils.cpp  ComponentUtils.h  Context.cpp  Context.h  ECSEvents.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Group.cpp  Group.h  README.md
Events/: BaseEvent.h  EventManagement.h  EventUtils.cpp  EventUtils.h
